--- a/CamsPack.csproj
+++ b/CamsPack.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <RootNamespace>CamsTowerPack</RootNamespace>
+        <RootNamespace>CamsPack</RootNamespace>
         <Configurations>Debug;Release</Configurations>
         <Nullable>enable</Nullable>
         <AssemblyName>CamsPack</AssemblyName>
